# nonebot-plugin-savor

./: README.md  pyproject.toml
nonebot_plugin_savor/: __init__.py  savor.py
